--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 # Ignoring the virtual environment directory
 __env__/
+
+# Ignores my struct.txt file
+# This file is used to store the concept structure of the project
+struct.txt
